remove babel-polyfill import

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
       "jsdom-worker"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "@alexanderolsen/libsamplerate-js": "^1.0.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
