--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
 	"presets": ["@babel/preset-env"],
-	"plugins": ["transform-class-properties"]
+	"plugins": [
+		["transform-class-properties"],
+		[
+			"@babel/plugin-transform-runtime",
+			{
+				"regenerator": true
+			}
+		]
+	]
 }
