--- a/package.json
+++ b/package.json
@@ -1,49 +1,66 @@
 {
   "name": "@alexanderolsen/feeder-node",
-  "version": "0.1.0",
-  "description": "An audio node meant for feeding PCM daata",
+  "version": "1.0.0",
+  "description": "Feed mono or stereo audio data for playback. Ideal for real-time audio.",
+  "keywords": [
+    "webrtc",
+    "websocket",
+    "real time",
+    "web assembly",
+    "wasm",
+    "libsamplerate",
+    "web audio",
+    "audio",
+    "feeder"
+  ],
   "main": "./dist/feeder-node.js",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "watch": "npx webpack --watch",
+    "watch-chunk-feeder": "nodemon --watch examples/chunk-feeder/src --exec \"cd examples/chunk-feeder; npx webpack --config webpack.config.js\""
+  },
+  "author": "Alexander Olsen",
+  "license": "MIT",
+  "homepage": "https://github.com/aolsenjazz/feeder-node",
+  "repository": "https://github.com/aolsenjazz/feeder-node",
+  "bugs": "https://github.com/aolsenjazz/feeder-node/issues",
   "jest": {
     "collectCoverageFrom": [
       "src/*.js"
     ],
     "moduleNameMapper": {
+      "@alexanderolsen/libsamplerate-js": "<rootDir>/src/__mocks__/libsamplerate.js",
       "feeder-node.worker.js": "<rootDir>/src/__mocks__/feeder-node.worker.js",
+      "worker-resampler": "<rootDir>/src/__mocks__/worker-resampler.js",
+      "main-thread-resampler": "<rootDir>/src/__mocks__/main-thread-resampler.js",
+      "audio-worklet-backend": "<rootDir>/src/__mocks__/audio-worklet-backend.js",
+      "script-processor-backend": "<rootDir>/src/__mocks__/script-processor-backend.js",
+      "MAIN_THREAD_RESAMPLER": "<rootDir>/src/main-thread-resampler.js",
+      "WORKER_RESAMPLER": "<rootDir>/src/worker-resampler.js",
+      "SCRIPT_PROCESSOR_BACKEND": "<rootDir>/src/script-processor-backend.js",
+      "AUDIO_WORKLET_BACKEND": "<rootDir>/src/audio-worklet-backend.js",
       "FEEDER_NODE_WORKER": "<rootDir>/src/feeder-node.worker.js"
-    },
-    "setupFiles": [
-      "jsdom-worker"
-    ]
+    }
   },
   "dependencies": {
-    "@alexanderolsen/libsamplerate-js": "^1.0.4"
+    "@alexanderolsen/libsamplerate-js": "^1.1.3",
+    "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "http-server": "^0.12.3",
     "jest": "^26.6.3",
-    "jest-mock-console": "^1.0.1",
-    "jsdom-global": "^3.0.2",
-    "jsdom-worker": "^0.2.1",
-    "nodaemon": "0.0.5",
-    "node-fetch": "^2.6.1",
-    "wait-for-expect": "^3.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "wavefile": "^11.0.0",
     "web-audio-test-api": "^0.5.2",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "worker-loader": "^3.0.7",
-    "worker-plugin": "^5.0.0",
-    "workerloader-jest-transformer": "0.0.2",
-    "xhr-mock": "^2.5.1"
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
   }
 }
