--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexanderolsen/feeder-node",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Feed mono or stereo audio data for playback. Ideal for real-time audio.",
   "keywords": [
     "webrtc",
@@ -53,6 +53,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@fiverr/afterbuild-webpack-plugin": "^1.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -62,6 +63,7 @@
     "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "string-replace-loader": "^3.0.1",
     "wavefile": "^11.0.0",
     "web-audio-test-api": "^0.5.2",
     "webpack": "^5.14.0",
