--- a/package.json
+++ b/package.json
@@ -47,6 +47,18 @@
       "FEEDER_NODE_WORKER": "<rootDir>/src/feeder-node.worker.js"
     }
   },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2021": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "rules": {}
+  },
   "dependencies": {
     "@alexanderolsen/libsamplerate-js": "^1.1.3",
     "@babel/runtime": "^7.12.5"
