--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint": "^8.26.0",
     "eslint-plugin-jest": "^27.1.3",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "string-replace-loader": "^3.0.1",
