--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexanderolsen/feeder-node",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Feed mono or stereo audio data for playback. Ideal for real-time audio.",
   "keywords": [
     "webrtc",
@@ -60,7 +60,7 @@
     "rules": {}
   },
   "dependencies": {
-    "@alexanderolsen/libsamplerate-js": "2.1.1",
+    "@alexanderolsen/libsamplerate-js": "^2.1.1",
     "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
@@ -80,6 +80,7 @@
     "eslint-plugin-jest": "^27.1.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "string-replace-loader": "^3.0.1",
